--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,13 @@
 server:
-  port: 8000
+  port: ${CONFIG_SERVER_PORT}
+  #8000
 spring:
   cloud:
     config:
       server:
         encrypt.enabled: false
         git:
-          uri: https://github.com/MuhammedMahrous/Config-FootballApp
-          searchPaths: users-service
+          uri: ${CONFIG_SERVER_GITHUB_URL}
+          # https://github.com/MuhammedMahrous/Config-FootballApp
+          searchPaths: ${CONFIG_SERVER_GITHUB_PATHS}
+          # users-service
